add_sources(
	CMakeLists.txt
	ammo.cpp
	ammo.h
	ammo_secondary.cpp
	ammo_secondary.h
	ammohistory.cpp
	ammohistory.h
	base.h
	base.cpp
	battery.cpp
	battery.h
	chat.cpp
	chat.h
	crosshair.cpp
	crosshair.h
	death_notice.cpp
	death_notice.h
	death_notice_panel.cpp
	death_notice_panel.h
	flashlight.cpp
	flashlight.h
	geiger.cpp
	geiger.h
	health.cpp
	health.h
	jumpspeed.cpp
	jumpspeed.h
	menu.cpp
	menu.h
	message.cpp
	message.h
	scores.cpp
	scores.h
	spectator.cpp
	spectator.h
	speedometer.cpp
	speedometer.h
	status_icons.cpp
	status_icons.h
	statusbar.cpp
	statusbar.h
	strafeguide.cpp
	strafeguide.h
	text_message.cpp
	text_message.h
	timer.cpp
	timer.h
	train.cpp
	train.h
	voice_status.cpp
	voice_status.h
	voice_status_self.cpp
	voice_status_self.h
)

add_subdirectory( ag )
