add_sources(
	CMakeLists.txt
	color_picker.cpp
	color_picker.h
	cvar_check_button.cpp
	cvar_check_button.h
	cvar_color.cpp
	cvar_color.h
	cvar_combo_box.cpp
	cvar_combo_box.h
	cvar_slider.cpp
	cvar_slider.h
	cvar_text_entry.cpp
	cvar_text_entry.h
	
	adv_options_dialog.cpp
	adv_options_dialog.h
	options_about.cpp
	options_about.h
	options_chat.cpp
	options_chat.h
	options_crosshair.cpp
	options_crosshair.h
	options_general.cpp
	options_general.h
	options_hud.cpp
	options_hud.h
	options_hud_colors.cpp
	options_hud_colors.h
	options_hud_root.cpp
	options_hud_root.h
	options_models.cpp
	options_models.h
	options_scoreboard.cpp
	options_scoreboard.h
)

add_subdirectory( colorpicker )
